most of batch layout

--- a/XChemSPA/XChemSPA_frontend/static/frontend/plate_model.css
+++ b/XChemSPA/XChemSPA_frontend/static/frontend/plate_model.css
@@ -5,6 +5,7 @@ div#allot{
 	background: white;
 	padding: 2em;
 	border: solid  #ec0000 2px;
+	z-index: 3;
 }
 
 table#crystal-plate-model#crystal-plate-model{
