--- a/XChemSPA/XChemSPA_frontend/templates/frontend/index.html
+++ b/XChemSPA/XChemSPA_frontend/templates/frontend/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://bootswatch.com/4/cosmo/bootstrap.min.css">
     <link rel="stylesheet" href="{% static "frontend/prep.css" %}">
     <link rel="stylesheet" href="{% static "frontend/plate_model.css" %}">
+    <link rel="stylesheet" href="{% static "frontend/batches.css" %}">
+    <link rel="stylesheet" href="{% static "frontend/crystals.css" %}">
 
     <title>Compound screen - WebSoakDB</title>
 </head>
