importing compound data

--- a/XChemSPA/XChemSPA_frontend/static/frontend/batches.css
+++ b/XChemSPA/XChemSPA_frontend/static/frontend/batches.css
@@ -101,6 +101,8 @@ aside.show button#hide-sidebar {
 
 .container-cell {
 	background: #e2e2e2 ;
+	height: 30em;
+	overflow: auto;
 }
 
 .container-cell-hidden {
