--- a/XChemSPA/XChemSPA_frontend/templates/frontend/index.html
+++ b/XChemSPA/XChemSPA_frontend/templates/frontend/index.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="{% static "frontend/plate_model.css" %}">
     <link rel="stylesheet" href="{% static "frontend/batches.css" %}">
     <link rel="stylesheet" href="{% static "frontend/crystals.css" %}">
+    <link rel="stylesheet" href="{% static "frontend/soak.css" %}">
 
-    <title>Compound screen - WebSoakDB</title>
+    <title>XChemSPA - Compound screen</title>
 </head>
 <body>
     <div id="app"></div>
