--- a/XChemSPA/XChemSPA_frontend/static/frontend/prep.css
+++ b/XChemSPA/XChemSPA_frontend/static/frontend/prep.css
@@ -126,7 +126,7 @@ form#import-compounds {
 	margin-top: 20px;
 	display: grid;
 	grid-gap: 1em;
-	grid-template-columns: 18em auto;
+	grid-template-columns: max-content auto;
 }
 
 /*CRYSTALS*/
