--- a/XChemSPA/XChemSPA_frontend/static/frontend/prep.css
+++ b/XChemSPA/XChemSPA_frontend/static/frontend/prep.css
@@ -15,6 +15,10 @@ section.changed {
 	background: aliceblue;
 }
 
+div.position-container {
+	position: relative;
+}
+
 button {
 	border-width: 1px;
 	border-color: #ec0000;
@@ -66,17 +70,6 @@ caption {
 }
 
 /*same as actual Bootstrap links; throw out after implementing react routers*/
-span.pseudo-link {
-	color:#2780e3;
-	text-decoration:none;
-	background-color:transparent
-}
-
-.pseudo-link:hover {
-	color:#165ba8;
-	text-decoration:underline
-}
-
 .close-icon {
 	position: absolute;
 	top: 3px;
@@ -84,7 +77,6 @@ span.pseudo-link {
 	cursor: pointer;
 }
 
-input[type="number"]
 
 /*OLD*/
 
@@ -131,103 +123,12 @@ form#import-compounds {
 
 /*CRYSTALS*/
 
-
-#crystals main{
-	display: grid;
-	grid-template-columns: 400px auto;
-}
-
-div#crystal-plates{
-	grid-column: 2/3;
-}
-
-#sidebar{
-	background: white;
-	grid-column: 1/2;
-	/*height: 100%;
-	position: fixed;
-	top: 2px;*/
-}
-
-#crystals form {
-	border: solid black 1px;
-	display: grid;
-	grid-template-columns: auto auto;
-	padding-top: 1em;
-	margin-bottom: 1em;
-}
-
-#crystals form label {
-	grid-column: 1/2;
-}
-
-#crystals form h3 {
-	grid-column: 1/3;
-}
-
-div {
-	padding: 5px
-}
-/*
-button {
-	margin: 0.5em;
-	padding: 0.5em;
-	font-size: 1.2em;
-}
-
-
-.nextlink{
-	padding-top:20px;
-	text-align: right;
-}
-*/
-
-label {
-	font-weight: bold;
-	padding: 0.5em;
-	text-align: right;
-}
-
 input {
 	padding: 0.5em;
 }
 
-input[type="radio"]{
-	grid-column: 1/2;
-	background: red;
-	color: red;
-}
-
-input[type="number"]{
-	width: 5em;
-}
-
 img {
 	padding: 0;
-}
-
-img.bin-pic, img.info-pic, img.show-pic{
-	position: absolute;
-	opacity: 0.5;
-	top:0;
-	visibility: visible;
-}
-
-img.bin-pic:hover, img.info-pic:hover, img.show-pic:hover, img.hide-pic:hover, img.show-used-crystals:hover {
-	opacity:1;
-}
-
-img.bin-pic {
-	left:0;
-}
-
-
-.hide-icon {
-	visibility: hidden;
-	position: absolute;
-	opacity: 0.5;
-	top: 14px;
-	right:40px;
 }
 
 img.show-pic {
@@ -251,187 +152,11 @@ img.show-pic {
 
 .hidden {
 	display: none;
-	animation: disappear-big;
 }
-
-rejected .hidden .{
-	display: none;
-	animation: disappear-small;
-}
-
-
-.gallery {
-	margin: 5px;
-	position: relative;
-	display: block;
-	padding: 0;
-	border: solid black 2px;
-	animation-name: disappear-big;
-	animation-play-state: paused;
-	animation-iteration-count: infinite;
-}
-
-.used-div .gallery{
-	margin: 5px;
-	position: relative;
-	display: block;
-	padding: 0;
-	border: solid black 2px;
-	width: 120px;
-}
-
-.used-div .bin-pic {
-	display: none;
-}
-
-.used-div .main-pic {
-	width: 120px;
-}
-
-.rejected-div .main-pic {
-	width: 120px;
-}
-
-.used-div, .accepted-div, .rejected-div {
-	position: relative;
-}
-.show-used-crystals, .hide-used-crystals {
-	position: absolute;
-	top: 3em;
-	left: 5px;
-	opacity: 0.5;
-}
-
-.main-pic {
-	animation-name: disappear-big;
-	animation-play-state: paused;
-	animation-iteration-count: infinite;
-}
-
-.rejected-div .crystal-group {
-	border: solid red 2px;
-}
-
-.rejected .main-pic {
-	width: 120px;
-	animation-name: disappear-small;
-	animation-play-state: paused;
-	animation-iteration-count: infinite;
-}
-
-.rejected .gallery {
-	animation-name: disappear-small;
-	animation-play-state: paused;
-	animation-iteration-count: infinite;
-}
-
-.crystal-group {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: flex-start;
-}
-
-
-#crystal-form {
-	display: grid;
-	grid-template-columns: 70% 30%;
-}
-/*
-#crystal-form label{
-	grid-column: 1/2;
-	color: red;
-}*/
 
 button[type=submit]{
 	grid-column: 1/-1;
-}
-
-#total-accepted, #total-rejected {
-	font-size: 1.5em;
-}
-
-.plate-type {
-	visibility: hidden;
-}
-
-.well-name {
-	font-size: 1.2em;
-	font-weight: bold;
-	text-align: center;
-}
-
-
-#add-plates {
-	display: grid;
-	grid-template: auto auto auto/ auto auto;
-	border: solid black 1px;
-}
-
-#add-plates input {
-	/*width: 80%;*/
-	margin: 1em;
-}
-
-.plate-buttons {
-	display: grid;
-	grid-template-rows: auto auto;
-	position: absolute;
-	top: 0;
-	right: 0;
-}
-
-.plate-buttons button {
-	margin: 0;
-	padding: 5px;
-}
-
-.partial .used {
-	display: none;
-}
-
-.all-used, .used, .used-div {
-	background: grey;
-}
-
-.used-div {
-	position: relative;
-}
-
-.hidden-input input[type="checkbox"] {
-	display: none;
-}
-
-
-input[type="radio"]:checked ~ .infobox {
-	display: grid;
-}
-
-label.show-icon, label.hide-icon {
-	width: 0;
-	margin: 0;
-	padding: 0;
-}
-
-input[type="radio"]:checked ~ .hide-icon {
-	visibility: visible;
-}
-
-@keyframes disappear-big {
-	from {width: 200px; height: 200px;}
-	to {width: 0; height: 0;}
-}
-
-@keyframes disappear-small {
-	from {width: 100px; height: 100px;}
-	to {width: 0; height: 0;}
-}
-
-.show-plate {
-	display: block;
-}
-
-.hide {
-	display: none;
+	width: 100%;
 }
 
 /********************************/
