--- a/XChemSPA/XChemSPA_frontend/templates/frontend/index.html
+++ b/XChemSPA/XChemSPA_frontend/templates/frontend/index.html
@@ -11,12 +11,13 @@
     <link rel="stylesheet" href="{% static "frontend/batches.css" %}">
     <link rel="stylesheet" href="{% static "frontend/crystals.css" %}">
     <link rel="stylesheet" href="{% static "frontend/soak.css" %}">
+    <link rel="stylesheet" href="{% static "frontend/header.css" %}">
+    <link rel="stylesheet" href="{% static "frontend/animations.css" %}">
 
     <title>XChemSPA - Compound screen</title>
 </head>
 <body>
     <div id="app"></div>
-
     <script src="{% static "frontend/main.js" %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
