soak and cryo - basic functionalities

--- a/XChemSPA/XChemSPA_frontend/static/frontend/batches.css
+++ b/XChemSPA/XChemSPA_frontend/static/frontend/batches.css
@@ -102,7 +102,7 @@ aside.show button#hide-sidebar {
 .container-cell {
 	background: #e2e2e2 ;
 	max-height: 30em;
-	overflow: auto;
+	overflow: scroll;
 }
 
 .container-cell-hidden {
