--- a/XChemSPA/XChemSPA_frontend/static/frontend/prep.css
+++ b/XChemSPA/XChemSPA_frontend/static/frontend/prep.css
@@ -101,10 +101,10 @@ hr {
 	padding: 1em;
 }
 
-form#import-compounds {
+#source form {
 	border: 1px solid black;
 	padding: 1em;
-	margin: 0.5em;
+	margin: 0.5em;	
 }
 
 #source main {
